addressed all final edit requests

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Skanda Sabbagh",
+  "name": "Skanda Sabbagh music productions for videos and advertising",
   "icons": [
     {
       "src": "favicon.ico",
